# so-you-inherited-a-database

./: .gitignore  README.md  devbox.json  docker-compose.yml  pyproject.toml
compose/alertmanager/: alertmanager.yml  testing-alerts.md
compose/grafana/: README.md  import-dashboards.py
compose/grafana/provisioning/dashboards/: 22056-postgresql-v2.json  dashboards.yml
compose/grafana/provisioning/datasources/: prometheus.yml
compose/loki/: README.md  loki-config.yaml
compose/postgres/init/: 50-monitoring-setup.sh
compose/prometheus/: alert-notes.md  alerts.yml  prometheus.yml  promql_examples.md  recording_rules.yml
compose/vector/: README.md  vector.yaml
metrics/notes/: custom_query_options.md  promql_examples.md
metrics/postgres_exporter/: README.md  queries.yaml
src/cmd/: __init__.py  report.py
src/dbx/: __init__.py  cli.py  config.py
src/dbx/grafana/: __init__.py  client.py  sections.py
src/dbx/pg/: __init__.py  client.py  extension_health.py  inspect.py  queries.py  sections.py
src/dbx/report/: __init__.py  findings.py  markdown.py
tests/: conftest.py  test_backup_section.py  test_capabilities.py  test_config.py  test_extension_health.py  test_markdown.py  test_memory_effectiveness.py  test_pg_client.py  test_queries.py
